src/app/page.css
/* ... */
.simpleTable th {
  @apply p-[12px] text-left text-[16px] border border-[#ddd];
}

.simpleTable td {
  @apply p-[12px] text-left text-[14px] border border-[#ddd] border-b;
}

.simpleTable td:first-child {
  @apply font-[700];
}

.simpleTableContainer {
  @apply overflow-x-auto overflow-y-hidden;
}

.autoComplete {
  @apply bg-[white];
}

/* ---------------- COMMON UTILITIES ---------------- */

.borderRadius15 { @apply rounded-[15px]; }

.bottomMargin20 { @apply mb-[20px]; }

.bottomMargin75 { @apply mb-[100px]; }

.buildDate {
  @apply w-[215px]! mb-[25px];
}
.arrowIcon { @apply float-left ml-[10px] relative top-[-12px] z-[999]; }

.cancelItemsIcon { @apply relative scale-[1.5] right-[-375px] top-[-6] }

.cancelWatchListIcon { @apply relative right-[-175px] scale-[1.5] top-[-12] }

.card { @apply flex justify-start items-center h-[40px] mb-[10px]; }

.cards { @apply grid w-[600px] grid-cols-[repeat(auto-fit,minmax(200px,1fr))]; }

.clickable { @apply cursor-pointer pointer-events-auto!; }

.closeButton { @apply relative left-[140px] scale-[2.1]!; }

.customCloseButton { @apply float-right; }

.customBorderRadius { @apply rounded-[15px]; }

.customLeftMargin { @apply ml-[7px]; }

.customLeftMargin2 { @apply ml-[35px]; }

.customModalHeight { @apply min-h-[60px]!; }

.customWidth { @apply min-w-[100%]! h-[30px]; }

.error { @apply text-[rgb(211,47,47)]; }

.flex { @apply flex; }

.inlineFlex { @apply inline-flex; }

.fullWidth { @apply w-full; }

.fullWidthHeight { @apply w-full h-full; }

.fullWidthInput { @apply min-w-[300px]; }

.fontStyle { @apply font-["Brush_Script_MT",cursive]!; }

.hamburger-icon {
  @apply text-[3xl] cursor-pointer fixed z-[999999] transition-transform duration-[0.3s] ease-[ease-in-out] left-[15] top-[8px] scale-[2];
}

.hamburger-icon.open {
  @apply left-[65]
}

.hamburger-sidebar-menu {
  @apply fixed w-fit h-full bg-[#333] text-[white] transition-transform duration-[0.3s] ease-[ease-in-out] z-[10000] overflow-y-auto p-[5] -left-full top-[0];
}
.hamburger-sidebar-menu:not(.open) {
  @apply hidden;
}
.hamburger-sidebar-menu.open {
  @apply inline-block left-[0];
}
.hamburger-menu-content {
  @apply flex flex-col gap-[30px] pt-[45px];
}
.hamburger-menu-row {
  @apply grid grid-cols-[75px_1fr] items-center gap-x-[1.5];
}
.hamburger-menu-row .title {
  @apply flex w-[100px];
}

.hyperlink { @apply text-[blue]; }

.icon { @apply cursor-pointer scale-[1.8]!; }

.iconLarge { @apply cursor-pointer scale-[2] inline-block w-[1em] relative top-[5px] mr-[50px]; }

.iconLarge:last-of-type { @apply mr-[25px]; }

.IMDBCardModal {
    @apply relative pt-[50px]! pb-[150px]
}

.IMDBCloseButton {
  @apply relative right-[-90%] scale-[1.8];
}

.IMDBSearchButton {
 @apply relative left-[95px] top-[-17px] h-[30px];
}

.IMDBSearchHeader {
    @apply fixed top-[120px] z-[999] flex items-center justify-between pb-[35px] w-[500px];
}

.IMDBSearchModalContent {
  @apply relative min-w-[400px]!;
}

.largeText { @apply text-[36px]; }

.leftMargin { @apply ml-[25px]; }

.leftMargin10 { @apply ml-[10px]; }

.leftMargin40 { @apply ml-[40px]; }

.leftMargin50 { @apply ml-[50px]; }

.leftMargin60 { @apply ml-[60px]; }

.leftMargin75 { @apply ml-[75px]; }

.leftMargin125 { @apply ml-[125px]; }

.lineChart { @apply max-w-[min-content] border; }

.linkStyle { @apply no-underline!; }

.login-container {
  @apply relative z-[1] max-w-[360px] text-center shadow-[0_0_20px_0_rgba(0,0,0,0.2),0_5px_5px_0_rgba(0,0,0,0.24)] mt-[0] mb-[100px] mx-auto p-[45px] border-2 border-solid border-[rgba(255,255,255,0.1)];
}
.login-background {
  @apply bg-cover bg-repeat box-border min-h-screen h-full absolute w-full z-[-999];
}
.login-form input {
  @apply [font-family:"Roboto",sans-serif] [outline:0] w-full box-border text-[sm] mt-[0] mb-[15px] mx-[0] p-[15px] rounded-[15px] border-[0];
}
.login-form button {
  @apply [font-family:"Roboto",sans-serif] uppercase [outline:0] bg-[#3880ff] w-full text-[white] text-[sm] [-webkit-transition:all_0.3_ease] transition-all duration-[0.3] ease-[ease] cursor-pointer p-[15px] rounded-[15px] border-[0];
}
.login-form button:hover,
.login-form button:active,
.login-form button:focus {
  @apply [background:#3880ff];
}
.login-form .message {
  @apply text-[#b3b3b3] text-[xs] mt-[15px] mb-[0] mx-[0];
}
.login-form .message a {
  @apply text-[#3880ff] no-underline;
}
.login-form .register-form {
  @apply hidden;
}
.login-label {
  @apply [font-family:'Poppins',sans-serif] text-[28px] font-[bold] relative top-[-20px];
}
.login-page {
  @apply w-[360px] m-auto pt-[8%] pb-[0] px-[0];
}

.maxWidth { @apply min-w-[50%]; }

.metaDataFiltersModal { @apply pt-[50px]! pb-[150px] }
.metaDataFilterButtons { @apply flex items-center justify-between w-[300px]; }

.metaDataFilterLabel { @apply select-none mb-[20px] }

.metaDataFilters { @apply relative top-[-50px] h-[98%] w-[300px]! mb-[100px] }

.minWidth105 { @apply min-w-[105px]!; }

.minWidth150 { @apply min-w-[150px]!; }

.narrow { @apply h-[30px]; }

.narrowWidth { @apply w-[60px]; }

.no-border { @apply border-none! w-[unset]!; }

.no-width { @apply w-[unset]; }

.noBulletPoints { @apply list-none; }

.overflowX { @apply overflow-x-scroll; }

.overflowY { @apply overflow-y-scroll; }

.overflowYAuto {  @apply overflow-y-auto; }

.paddingTop50 { @apply pt-[50px]; }

.pageNavigationBar {
  @apply leading-none border box-border h-[38px] flex items-center w-full justify-center z-[100] [-webkit-tap-highlight-color:transparent] border-solid border-[lightgray];
}

.light .pageNavigationBar {
  @apply bg-[#fafaec];
}

.dark .pageNavigationBar {
   @apply bg-[#3b3b38]
}

.top .pageNavigationBar {
  @apply fixed;
}

.pageNavigationBar.lastPage {
  @apply relative bottom-[0];
}

.bottom .pageNavigationBar {
  @apply sticky bottom-[56px];
}
.bottom.noTabs .pageNavigationBar {
  @apply bottom-[0];
}

.pageNavigationBarLeftTop {
  @apply cursor-pointer relative top-[6px] inline-block scale-[3] right-[-75px];
}
/* ... */

